# monopoly-cloud

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  tests.yaml
monocloud/: config.py  constants.py  local.py  main.py
monocloud/gmail/: __init__.py  credentials.py  gmail.py  pubsub.py  quickstart.py
monocloud/storage/: __init__.py  storage.py
terraform/: api.tf  backend.tf  bigquery.tf  buckets.tf  data.tf  dbs.tf  kms.tf  local.tf  main.tf  providers.tf  pubsub.tf  variables.tf
tests/: conftest.py
tests/integration/: test_main_entrypoint.py
tests/unit/: conftest.py  test_check_trusted_user.py  test_get_attachment.py  test_load.py  test_persist_attachment.py  test_process_bank_statement.py
